Configurações na api, resolução de bugs e criação da aba posts